Replace array lists with linked lists.